tests/snapshots/serde__de_float32array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array([1, 2]).subarray(1, 2)"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            128,
            63,
            0,
            0,
            0,
            64,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Float32Array,
        buffer: *0,
        byte_offset: 4,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

