tests/snapshots/serde__de_float32array_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array([1.0, -2.5])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            128,
            63,
            0,
            0,
            32,
            192,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Float32Array,
        buffer: *0,
        byte_offset: 0,
        length: 2,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

