tests/snapshots/serde__de_float32array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array([0, 0, 0])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Float32Array,
        buffer: *0,
        byte_offset: 0,
        length: 3,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

