tests/snapshots/serde__de_float64array_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array(1)"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Float64Array,
        buffer: *0,
        byte_offset: 0,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

